aplicando correcciones de la revisión

--- a/howto/logging-cookbook.po
+++ b/howto/logging-cookbook.po
@@ -230,7 +230,7 @@ msgid ""
 "blocking the thread you're logging from. This is common in web applications, "
 "though of course it also occurs in other scenarios."
 msgstr ""
-"A veces tiene que hacer que sus manejadores de registro hagan su trabajo sin "
+"A veces tiene que hacer que sus gestores de registro hagan su trabajo sin "
 "bloquear el hilo desde el que está iniciando sesión. Esto es común en las "
 "aplicaciones web, aunque, por supuesto, también ocurre en otros escenarios."
 
@@ -350,7 +350,7 @@ msgid ""
 "`SocketHandler` instance to the root logger at the sending end::"
 msgstr ""
 "Supongamos que desea enviar eventos de registro a través de una red y "
-"manejarlos en el extremo receptor. Una forma sencilla de hacer esto es "
+"gestionarlos en el extremo receptor. Una forma sencilla de hacer esto es "
 "adjuntar una instancia de :class:`SocketHandler` al registrador raíz en el "
 "extremo de envío::"
 
@@ -818,8 +818,8 @@ msgid ""
 "traceback information should be logged, or the ``extra`` keyword parameter "
 "to indicate additional contextual information to be added to the log). So "
 "you cannot directly make logging calls using :meth:`str.format` or :class:"
-"`string.Template` syntax, because internally the logging package uses "
-"%-formatting to merge the format string and the variable arguments. There "
+"`string.Template` syntax, because internally the logging package uses %-"
+"formatting to merge the format string and the variable arguments. There "
 "would be no changing this while preserving backward compatibility, since all "
 "logging calls which are out there in existing code will be using %-format "
 "strings."
@@ -1546,23 +1546,24 @@ msgstr ""
 "Las llamadas de logging (:meth:`~Logger.debug`, :meth:`~Logger.info`, etc.) "
 "solo toman parámetros posicionales para el mensaje logging real en sí, con "
 "parámetros de palabras clave que se utilizan solo para determinar las "
-"opciones sobre cómo manejar la llamada de logging (por ejemplo, el parámetro "
-"de palabra clave ``exc_info`` para indicar que la información de rastreo "
-"debe registrarse, o el parámetro de palabra clave ``extra`` para indicar "
-"información contextual adicional que se agregará al log). Por lo tanto, no "
-"puede realizar llamadas de logging directamente usando la sintaxis :meth:"
-"`str.format` o :class:`string.Template`, porque internamente el paquete "
-"logging usa formato % para fusionar la cadena de formato y los argumentos de "
-"las variables. No se cambiaría esto mientras se conserve la compatibilidad "
-"con versiones anteriores, ya que todas las llamadas de logging que están en "
-"el código existente utilizarán cadenas de caracteres formato %."
+"opciones sobre cómo gestionar la llamada de logging (por ejemplo, el "
+"parámetro de palabra clave ``exc_info`` para indicar que la información de "
+"rastreo debe registrarse, o el parámetro de palabra clave ``extra`` para "
+"indicar información contextual adicional que se agregará al log). Por lo "
+"tanto, no puede realizar llamadas de logging directamente usando la "
+"sintaxis :meth:`str.format` o :class:`string.Template`, porque internamente "
+"el paquete logging usa formato % para fusionar la cadena de formato y los "
+"argumentos de las variables. No se cambiaría esto mientras se conserve la "
+"compatibilidad con versiones anteriores, ya que todas las llamadas de "
+"logging que están en el código existente utilizarán cadenas de caracteres "
+"formato %."
 
 #: ../Doc/howto/logging-cookbook.rst:1982
 msgid ""
 "There have been suggestions to associate format styles with specific "
 "loggers, but that approach also runs into backward compatibility problems "
-"because any existing code could be using a given logger name and using "
-"%-formatting."
+"because any existing code could be using a given logger name and using %-"
+"formatting."
 msgstr ""
 "Ha habido sugerencias para asociar estilos de formato con *loggers* "
 "específicos, pero ese enfoque también tiene problemas de compatibilidad con "
@@ -2326,8 +2327,8 @@ msgid ""
 "different handler instances which happen to point to the same file."
 msgstr ""
 "La salida del registro se puede distorsionar porque varios subprocesos o "
-"procesos intentan escribir en el mismo archivo. Aunque el registro protege "
-"contra el uso simultáneo de la misma instancia de controlador por varios "
+"procesos intentan escribir en el mismo archivo. Aunque el registro se "
+"protege de el uso simultáneo de la misma instancia de controlador por varios "
 "subprocesos, no existe tal protección si dos subprocesos diferentes intentan "
 "escrituras simultáneas utilizando dos instancias de controlador diferentes "
 "que apunten al mismo archivo."
@@ -2381,7 +2382,7 @@ msgstr ""
 msgid ""
 "Adding handlers other than :class:`NullHandler` to a logger in a library"
 msgstr ""
-"Agregar controladores distintos a :class:`NullHandler` a un registrador en "
+"Agregar controladores distintos de :class:`NullHandler` a un registrador en "
 "una biblioteca"
 
 #: ../Doc/howto/logging-cookbook.rst:3045
@@ -2399,7 +2400,7 @@ msgstr ""
 
 #: ../Doc/howto/logging-cookbook.rst:3052
 msgid "Creating a lot of loggers"
-msgstr "Crando muchos registradores (*loggers*)"
+msgstr "Creando muchos registradores (*loggers*)"
 
 #: ../Doc/howto/logging-cookbook.rst:3054
 msgid ""
@@ -2418,4 +2419,4 @@ msgstr ""
 "existentes <context-info>` para pasar información contextual a sus registros "
 "y restringir los registradores creados a aquellos que describen áreas dentro "
 "de su aplicación (generalmente módulos, pero ocasionalmente un poco más "
-"fino) granulado que eso)."
+"detallado que eso)."
