usar retorna en vez de devuelve

--- a/distutils/apiref.po
+++ b/distutils/apiref.po
@@ -2128,7 +2128,7 @@ msgstr ""
 
 #: ../Doc/distutils/apiref.rst:1135
 msgid "Examples of returned values on macOS:"
-msgstr "Ejemplos de valores devueltos en macOS:"
+msgstr "Ejemplos de valores retornados en macOS:"
 
 #: ../Doc/distutils/apiref.rst:1137
 msgid "``macosx-10.3-ppc``"
