cambiando Powershell por PowerShell

--- a/whatsnew/changelog.po
+++ b/whatsnew/changelog.po
@@ -4731,7 +4731,7 @@ msgid ""
 "Powershell script static to allow for signing it."
 msgstr ""
 "`bpo-37354 <https://bugs.python.org/issue37354>`__: Haga que el script "
-"Activate.ps1 Powershell sea estático para permitir su firma."
+"Activate.ps1 PowerShell sea estático para permitir su firma."
 
 #: ../build/NEWS:1757
 msgid ""
