--- a/distutils/apiref.po
+++ b/distutils/apiref.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-02 10:58+0200\n"
+"PO-Revision-Date: 2021-11-26 14:46+0100\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/distutils/apiref.rst:5
 msgid "API Reference"
@@ -45,6 +46,10 @@ msgid ""
 "documentation at https://setuptools.readthedocs.io/en/latest/setuptools.html "
 "independently covers all of the relevant information currently included here."
 msgstr ""
+"Este documento se conserva únicamente hasta que la documentación de "
+"``setuptools`` en https://setuptools.readthedocs.io/en/latest/setuptools."
+"html cubra de forma independiente toda la información relevante que se "
+"incluye actualmente aquí."
 
 #: ../Doc/distutils/apiref.rst:19
 msgid ":mod:`distutils.core` --- Core Distutils functionality"
@@ -2090,19 +2095,17 @@ msgstr ""
 "platform``."
 
 #: ../Doc/distutils/apiref.rst:1122
-#, fuzzy
 msgid ""
 "For macOS systems the OS version reflects the minimal version on which "
 "binaries will run (that is, the value of ``MACOSX_DEPLOYMENT_TARGET`` during "
 "the build of Python), not the OS version of the current system."
 msgstr ""
-"Para los sistemas Mac OS X, la versión del SO refleja la versión mínima en "
-"la que se ejecutarán los binarios (es decir, el valor de "
+"Para los sistemas macOS, la versión del SO refleja la versión mínima en la "
+"que se ejecutarán los binarios (es decir, el valor de "
 "``MACOSX_DEPLOYMENT_TARGET`` durante la compilación de Python), no la "
 "versión del SO del sistema actual."
 
 #: ../Doc/distutils/apiref.rst:1126
-#, fuzzy
 msgid ""
 "For universal binary builds on macOS the architecture value reflects the "
 "universal binary status instead of the architecture of the current "
@@ -2113,7 +2116,7 @@ msgid ""
 "build (ppc, i386, x86_64) and ``intel`` is used for a universal build with "
 "the i386 and x86_64 architectures"
 msgstr ""
-"Para las compilaciones binarias universales en Mac OS X, el valor de la "
+"Para las compilaciones binarias universales en macOS, el valor de la "
 "arquitectura refleja el estado binario universal en lugar de la arquitectura "
 "del procesador actual. Para los binarios universales de 32 bits, la "
 "arquitectura es ``fat``, para los binarios universales de 64 bits la "
@@ -2124,9 +2127,8 @@ msgstr ""
 "arquitecturas i386 y x86_64"
 
 #: ../Doc/distutils/apiref.rst:1135
-#, fuzzy
 msgid "Examples of returned values on macOS:"
-msgstr "Ejemplos de valores retornados en AIX:"
+msgstr "Ejemplos de valores retornados en macOS:"
 
 #: ../Doc/distutils/apiref.rst:1137
 msgid "``macosx-10.3-ppc``"
@@ -2654,7 +2656,7 @@ msgstr ""
 
 #: ../Doc/distutils/apiref.rst:1455
 msgid ":mod:`distutils.sysconfig` has been merged into :mod:`sysconfig`."
-msgstr ""
+msgstr ":mod:`distutils.sysconfig` se ha fusionado en :mod:`sysconfig`."
 
 #: ../Doc/distutils/apiref.rst:1462
 msgid ""
@@ -2747,6 +2749,8 @@ msgid ""
 "The following functions are deprecated together with this module and they "
 "have no direct replacement."
 msgstr ""
+"Las siguientes funciones están obsoletas junto con este módulo y no tienen "
+"reemplazo directo."
 
 #: ../Doc/distutils/apiref.rst:1521
 msgid ""
