cambiar creando por crear

--- a/howto/logging-cookbook.po
+++ b/howto/logging-cookbook.po
@@ -2400,7 +2400,7 @@ msgstr ""
 
 #: ../Doc/howto/logging-cookbook.rst:3052
 msgid "Creating a lot of loggers"
-msgstr "Creando muchos registradores (*loggers*)"
+msgstr "Crear muchos registradores (*loggers*)"
 
 #: ../Doc/howto/logging-cookbook.rst:3054
 msgid ""
