--- a/whatsnew/2.4.po
+++ b/whatsnew/2.4.po
@@ -2372,8 +2372,8 @@ msgid ""
 "and :c:macro:`Py_RETURN_FALSE`. (Contributed by Brett Cannon.)"
 msgstr ""
 "Se agregaron tres nuevas macros de conveniencia para valores de retorno "
-"comunes de funciones de extensión: :c:macro:`Py_RETURN_NONE`, :c:macro:`"
-"Py_RETURN_TRUE`, y :c:macro:`Py_RETURN_FALSE`. (Contribuido por Brett "
+"comunes de funciones de extensión: :c:macro:`Py_RETURN_NONE`, :c:macro:"
+"`Py_RETURN_TRUE`, y :c:macro:`Py_RETURN_FALSE`. (Contribuido por Brett "
 "Cannon.)"
 
 #: ../Doc/whatsnew/2.4.rst:1456
@@ -2410,8 +2410,8 @@ msgid ""
 "The :c:macro:`Py_IS_NAN(X)` macro returns 1 if  its float or double argument "
 "*X* is a NaN.   (Contributed by Tim Peters.)"
 msgstr ""
-"La macro :c:macro:`Py_IS_NAN(X)` devuelve 1 si su argumento flotante o "
-"doble *X* es un NaN. (Contribuido por Tim Peters.)"
+"La macro :c:macro:`Py_IS_NAN(X)` devuelve 1 si su argumento flotante o doble "
+"*X* es un NaN. (Contribuido por Tim Peters.)"
 
 #: ../Doc/whatsnew/2.4.rst:1470
 msgid ""
