fix issues on the old translation

--- a/whatsnew/3.9.po
+++ b/whatsnew/3.9.po
@@ -142,10 +142,11 @@ msgid ""
 "`time`, :mod:`_weakref`) now use multiphase initialization as defined by PEP "
 "489;"
 msgstr ""
-"varios módulos de Python (:mod:`_abc`, :mod:"
-"`audioopASDF00bz2ASDF00codecsASDF00contextvarsASDF00cryptASDF00functoolsASDF00jsonASDF00locale`, :"
-"mod:`math`, :mod:`operator`, :mod:`resource`, :mod:`timeASDF00weakref`) "
-"ahora utilizan la inicialización multifase según lo definido por PEP 489;"
+"varios módulos de Python (:mod:`_abc`, :mod:`audioop`, :mod:`_bz2`, :mod:"
+"`_codecs`, :mod:`_contextvars`, :mod:`_crypt`, :mod:`_functools`, :mod:"
+"`_json`, :mod:`_locale`, :mod:`math`, :mod:`operator`, :mod:`resource`, :mod:"
+"`time`, :mod:`_weakref`) ahora utilizan la inicialización multifase según lo "
+"definido por PEP 489;"
 
 #: ../Doc/whatsnew/3.9.rst:92
 msgid ""
@@ -155,9 +156,9 @@ msgid ""
 "stable ABI defined by PEP 384."
 msgstr ""
 "varios módulos de biblioteca estándar (:mod:`audioop`, :mod:`ast`, :mod:"
-"`grpASDF00hashlib`, :mod:`pwdASDF00posixsubprocess`, :mod:`random`, :mod:"
-"`select`, :mod:`struct`, :mod:`termios`, :mod:`zlib`) ahora utilizan la ABI "
-"estable definida por PEP 384."
+"`grp`, :mod:`_hashlib`, :mod:`pwd`, :mod:`_posixsubprocess`, :mod:`random`, :"
+"mod:`select`, :mod:`struct`, :mod:`termios`, :mod:`zlib`) ahora utilizan la "
+"ABI estable definida por PEP 384."
 
 #: ../Doc/whatsnew/3.9.rst:97
 msgid "New library modules:"
@@ -426,9 +427,10 @@ msgstr ""
 "especificado en la línea de comando (por ejemplo: ``python3 script.py``): el "
 "módulo `` __file__`` attribute of the :mod:`__main__` se convirtió en una "
 "ruta absoluta, en lugar de una ruta relativa. Estas rutas ahora siguen "
-"siendo válidas después de que las tramas del módulo :func:`os."
-"chdirASDF01main__` cambien el directorio actual en este caso. (Contribuido "
-"por Victor Stinner en :issue:`20443`.)"
+"siendo válidas después de que las tramas del módulo :func:`os.chdir`. Como "
+"efecto alterno, la traza también muestra la ruta absoluta para los marcos "
+"del módulo :mod:`__main__` en este caso. (Contribuido por Victor Stinner en :"
+"issue:`20443`.)"
 
 #: ../Doc/whatsnew/3.9.rst:234
 msgid ""
@@ -510,10 +512,10 @@ msgid ""
 "mod:`operator` module. (Contributed by Serhiy Storchaka in :issue:`40824`.)"
 msgstr ""
 "Los errores inesperados al llamar al método ``__iter__`` ya no están "
-"enmascarados por ``TypeError`` en el operador: palabra clave: `in` y "
-"funciones :func:`~operator.contains`, :func:`~operator.indexOf` y :func:"
-"`~operator.countOf` del módulo :mod:`operator`. (Contribuido por Serhiy "
-"Storchaka en :issue:`40824`.)"
+"enmascarados por ``TypeError`` en el operador :keyword:`in` y funciones :"
+"func:`~operator.contains`, :func:`~operator.indexOf` y :func:`~operator."
+"countOf` del módulo :mod:`operator`. (Contribuido por Serhiy Storchaka en :"
+"issue:`40824`.)"
 
 #: ../Doc/whatsnew/3.9.rst:270
 msgid ""
@@ -551,7 +553,7 @@ msgid ""
 "distributed via PyPI and maintained by the CPython core team."
 msgstr ""
 "Como fuente de datos alternativa para las plataformas que no envían la base "
-"de datos de la IANA, el módulo | tzdata | _ se lanzó como un paquete propio, "
+"de datos de la IANA, el módulo |tzdata|_ se lanzó como un paquete propio, "
 "distribuido a través de PyPI y mantenido por el equipo central de CPython."
 
 #: ../Doc/whatsnew/3.9.rst:314
@@ -959,10 +961,11 @@ msgid ""
 "issue:`38615`.)"
 msgstr ""
 ":class:`~imaplib.IMAP4` y :class:`~imaplib.IMAP4_SSL` ahora tienen un "
-"parámetro *timeout* parameter for their constructors. Also, the ASDF04 "
-"method now has an optional *timeout* opcional con este cambio. Los métodos "
-"anulados de :class:`~imaplib.IMAP4_SSL` y :class:`~imaplib.IMAP4_stream` se "
-"aplicaron a este cambio. (Contribuido por Dong-hee Na en :issue:`38615`.)"
+"parámetro *timeout* parameter for their constructors. También el método :"
+"meth:`~imaplib.IMAP4.open` ahora tiene un parámetro opcional *timeout* con "
+"este cambio. Los métodos anulados de :class:`~imaplib.IMAP4_SSL` y :class:"
+"`~imaplib.IMAP4_stream` se aplicaron a este cambio. (Contribuido por Dong-"
+"hee Na en :issue:`38615`.)"
 
 #: ../Doc/whatsnew/3.9.rst:499
 msgid ""
@@ -2150,9 +2153,9 @@ msgid ""
 "since the *buffering* parameter has been removed. (Contributed by Victor "
 "Stinner in :issue:`39357`.)"
 msgstr ""
-"Se ha eliminado el parámetro *compresslevel* parameter of ASDF00 became "
-"keyword-only, since the *buffering*. (Contribuido por Victor Stinner en :"
-"issue:`39357`.)"
+"Se ha eliminado el parámetro *compresslevel* :class:`bz2.BZ2File` se "
+"convirtió solo en un parámetro de llave, ya que *buffering* se quitó. "
+"(Contribuido por Victor Stinner en :issue:`39357`.)"
 
 #: ../Doc/whatsnew/3.9.rst:1079
 msgid ""
@@ -2305,8 +2308,8 @@ msgstr ""
 "objeto de tipo desde Python 3.8. Como se indica en los \"Cambios en la API C"
 "\" de Python 3.8, para la gran mayoría de los casos, no debería haber "
 "efectos secundarios, pero para los tipos que tienen una función "
-"personalizada: c: member: `~ PyTypeObject.tp_traverse`, asegúrese de que "
-"todas las funciones ``tp_traverse`` personalizadas de los tipos asignados al "
+"personalizada :c:member:`~PyTypeObject.tp_traverse`, asegúrese de que todas "
+"las funciones ``tp_traverse`` personalizadas de los tipos asignados al "
 "montón visitan el tipo del objeto."
 
 #: ../Doc/whatsnew/3.9.rst:1160
@@ -2358,10 +2361,9 @@ msgid ""
 "(Contributed by Zackery Spytz in :issue:`34880`.)"
 msgstr ""
 "Se agregó el código de operación :opcode:`LOAD_ASSERTION_ERROR` para manejar "
-"la declaración: palabra clave: `assert`. Anteriormente, la declaración de "
-"aserción no funcionaría correctamente si la excepción :exc:`AssertionError` "
-"estuviera siendo sombreada. (Contribuido por Zackery Spytz en :issue:"
-"`34880`.)"
+"la declaración :keyword:`assert`. Anteriormente, la declaración de aserción "
+"no funcionaría correctamente si la excepción :exc:`AssertionError` estuviera "
+"siendo sombreada. (Contribuido por Zackery Spytz en :issue:`34880`.)"
 
 #: ../Doc/whatsnew/3.9.rst:1199
 msgid ""
@@ -2508,8 +2510,8 @@ msgid ""
 msgstr ""
 ":pep:`573`: Se agregó :c:func:`PyType_FromModuleAndSpec` para asociar un "
 "módulo con una clase; :c:func:`PyType_GetModule` y :c:func:"
-"`PyType_GetModuleState` para recuperar el módulo y su estado; y: c:data:"
-"`PyCMethod` y: c:data:`METH_METHOD` para permitir que un método acceda a la "
+"`PyType_GetModuleState` para recuperar el módulo y su estado; y :c:data:"
+"`PyCMethod` y :c:data:`METH_METHOD` para permitir que un método acceda a la "
 "clase en la que se definió. (Contribuido por Marcel Plch y Petr Viktorin en :"
 "issue:`38787`.)"
 
@@ -2651,11 +2653,11 @@ msgid ""
 "m_size` is greater than 0 and the module state (as returned by :c:func:"
 "`PyModule_GetState`) is ``NULL``."
 msgstr ""
-"Módulos de extensión:: c: member: `~ PyModuleDef.m_traverse`,: c: member:` ~ "
-"PyModuleDef.m_clear` y: c: member: `~ PyModuleDef.m_free` Las funciones de :"
-"c:type:`PyModuleDef` ya no se llaman si el estado del módulo era solicitado "
+"Módulos de extensión: :c:member:`~ PyModuleDef.m_traverse`, :c:member:"
+"`~PyModuleDef.m_clear` y :c:member:`~PyModuleDef.m_free` Las funciones de :c:"
+"type:`PyModuleDef` ya no se llaman si el estado del módulo era solicitado "
 "pero aún no asignado. Este es el caso inmediatamente después de que se crea "
-"el módulo y antes de que se ejecute (: función c:data:`Py_mod_exec`). Más "
+"el módulo y antes de que se ejecute (función :c:data:`Py_mod_exec`). Más "
 "precisamente, estas funciones no se llaman si: c: member: `~ PyModuleDef."
 "m_size` es mayor que 0 y el estado del módulo (como lo devuelve :c:func:"
 "`PyModule_GetState`) es ``NULL``."
@@ -2688,7 +2690,7 @@ msgid ""
 "by Zackery Spytz in :issue:`8901`.)"
 msgstr ""
 "El registro de Windows ya no se usa para inicializar :data:`sys.path` cuando "
-"se usa la opción ``-E`` (si: c: member: `PyConfig.use_environment` está "
+"se usa la opción ``-E`` (si :c:member:`PyConfig.use_environment` está "
 "configurado en ``0``). Esto es importante al incrustar Python en Windows. "
 "(Contribuido por Zackery Spytz en :issue:`8901`.)"
 
@@ -2698,7 +2700,7 @@ msgid ""
 "constant and refers to a constant string. (Contributed by Serhiy Storchaka "
 "in :issue:`38650`.)"
 msgstr ""
-"La variable global: c:data:`PyStructSequence_UnnamedField` ahora es una "
+"La variable global :c:data:`PyStructSequence_UnnamedField` ahora es una "
 "constante y se refiere a una cadena constante. (Contribuido por Serhiy "
 "Storchaka en :issue:`38650`.)"
 
@@ -2767,7 +2769,7 @@ msgstr ""
 "La macro :c:func:`PyObject_NEW` se convierte en un alias de la macro :c:func:"
 "`PyObject_New` y la macro :c:func:`PyObject_NEW_VAR` se convierte en un "
 "alias de la macro :c:func:`PyObject_NewVar`. Ya no acceden directamente al "
-"miembro: c: member: `PyTypeObject.tp_basicsize`."
+"miembro :c:member:`PyTypeObject.tp_basicsize`."
 
 #: ../Doc/whatsnew/3.9.rst:1381
 msgid ""
@@ -2776,7 +2778,7 @@ msgid ""
 "member when the limited C API was not used."
 msgstr ""
 ":c:func:`PyType_HasFeature` ahora siempre llama a :c:func:`PyType_GetFlags`. "
-"Anteriormente, accedía directamente al miembro: c: member: `PyTypeObject."
+"Anteriormente, accedía directamente al miembro :c:member:`PyTypeObject."
 "tp_flags` cuando no se usaba la API C limitada."
 
 #: ../Doc/whatsnew/3.9.rst:1385
@@ -2786,7 +2788,7 @@ msgid ""
 "member."
 msgstr ""
 "La macro :c:func:`PyObject_GET_WEAKREFS_LISTPTR` se convirtió en una "
-"función: la macro accedió directamente al miembro: c: member: `PyTypeObject."
+"función: la macro accedió directamente al miembro :c:member:`PyTypeObject."
 "tp_weaklistoffset`."
 
 #: ../Doc/whatsnew/3.9.rst:1389
@@ -2795,8 +2797,7 @@ msgid ""
 "accessed directly the :c:member:`PyTypeObject.tp_as_buffer` member."
 msgstr ""
 "La macro :c:func:`PyObject_CheckBuffer` se convirtió en una función: la "
-"macro accedió directamente al miembro: c: member: `PyTypeObject."
-"tp_as_buffer`."
+"macro accedió directamente al miembro :c:member:`PyTypeObject.tp_as_buffer`."
 
 #: ../Doc/whatsnew/3.9.rst:1392
 msgid ""
@@ -2806,7 +2807,7 @@ msgid ""
 msgstr ""
 ":c:func:`PyIndex_Check` ahora siempre se declara como una función opaca para "
 "ocultar los detalles de implementación: se eliminó la macro "
-"``PyIndex_Check()``. La macro accedió directamente al miembro: c: member: "
+"``PyIndex_Check()``. La macro accedió directamente al miembro :c:member:"
 "`PyTypeObject.tp_as_number`."
 
 #: ../Doc/whatsnew/3.9.rst:1396
