--- a/whatsnew/2.0.po
+++ b/whatsnew/2.0.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-10-16 21:42+0200\n"
-"PO-Revision-Date: 2021-08-05 09:24+0100\n"
-"Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
+"PO-Revision-Date: 2021-12-08 21:38+0100\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.9.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/whatsnew/2.0.rst:3
 msgid "What's New in Python 2.0"
@@ -97,7 +98,6 @@ msgstr ""
 "la 6 es parte de la evolución de Python, y no una rama lateral."
 
 #: ../Doc/whatsnew/2.0.rst:44
-#, fuzzy
 msgid ""
 "So, should you take much interest in Python 1.6?  Probably not.  The "
 "1.6final and 2.0beta1 releases were made on the same day (September 5, "
@@ -208,7 +208,6 @@ msgstr ""
 "raspador de pantalla HTML que envía mensajes más útiles."
 
 #: ../Doc/whatsnew/2.0.rst:95
-#, fuzzy
 msgid ""
 "The ease of adding code caused a few initial growing pains, such as code was "
 "checked in before it was ready or without getting clear agreement from the "
@@ -237,7 +236,6 @@ msgstr ""
 "la comunidad no esté de acuerdo con él."
 
 #: ../Doc/whatsnew/2.0.rst:106
-#, fuzzy
 msgid ""
 "Producing an actual patch is the last step in adding a new feature, and is "
 "usually easy compared to the earlier task of coming up with a good design. "
@@ -1508,7 +1506,6 @@ msgstr ""
 "pyport.h`."
 
 #: ../Doc/whatsnew/2.0.rst:767
-#, fuzzy
 msgid ""
 "Vladimir Marangozov's long-awaited malloc restructuring was completed, to "
 "make it easy to have the Python interpreter use a custom allocator instead "
@@ -1565,7 +1562,6 @@ msgstr ""
 "puede hacerse utilizando un compilador que sólo soporte K&R C."
 
 #: ../Doc/whatsnew/2.0.rst:790
-#, fuzzy
 msgid ""
 "Previously the Python virtual machine used 16-bit numbers in its bytecode, "
 "limiting the size of source files.  In particular, this affected the maximum "
@@ -1902,7 +1898,6 @@ msgid "Relationship to PyXML"
 msgstr "Relación con PyXML"
 
 #: ../Doc/whatsnew/2.0.rst:1004
-#, fuzzy
 msgid ""
 "The XML Special Interest Group has been working on XML-related Python code "
 "for a while.  Its code distribution, called PyXML, is available from the "
@@ -2147,7 +2142,6 @@ msgstr ""
 "por Paul Prescod.)"
 
 #: ../Doc/whatsnew/2.0.rst:1111
-#, fuzzy
 msgid ""
 ":mod:`robotparser`: Parse a :file:`robots.txt` file, which is used for "
 "writing web spiders that politely avoid certain areas of a web site.  The "
