--- a/whatsnew/3.7.po
+++ b/whatsnew/3.7.po
@@ -423,15 +423,14 @@ msgid "PEP 540: Forced UTF-8 Runtime Mode"
 msgstr "PEP 540: Modo de tiempo de ejecución UTF-8 forzado"
 
 #: ../Doc/whatsnew/3.7.rst:234
-#, fuzzy
 msgid ""
 "The new :option:`-X` ``utf8`` command line option and :envvar:`PYTHONUTF8` "
 "environment variable can be used to enable the :ref:`Python UTF-8 Mode <utf8-"
 "mode>`."
 msgstr ""
 "La nueva opción de lineas de comando :option:`-X` ``utf8`` y la variable de "
-"entorno :envvar:`PYTHONUTF8` se puede utilizar para habilitar el modo "
-"*CPython* *modo UTF-8*."
+"entorno :envvar:`PYTHONUTF8` se puede utilizar para habilitar el :ref:`modo "
+"Python UTF-8 <utf8-mode>`."
 
 #: ../Doc/whatsnew/3.7.rst:238
 msgid ""
@@ -3121,14 +3120,13 @@ msgstr ""
 "advertencias"
 
 #: ../Doc/whatsnew/3.7.rst:1591
-#, fuzzy
 msgid ""
 "in :ref:`CPython debug builds <debug-build>`, all warnings are now displayed "
 "by default (the implicit filter list is empty)"
 msgstr ""
-"en las compilaciones de depuración de CPython, ahora todas las advertencias "
-"se muestran de forma predeterminada (la lista de filtros implícitos está "
-"vacía)"
+"en las :ref:`compilaciones de depuración de CPython <debug-build>`, ahora "
+"todas las advertencias se muestran de forma predeterminada (la lista de "
+"filtros implícitos está vacía)"
 
 #: ../Doc/whatsnew/3.7.rst:1594
 msgid ""
