--- a/whatsnew/changelog.po
+++ b/whatsnew/changelog.po
@@ -18099,7 +18099,7 @@ msgid ""
 msgstr ""
 "`bpo-35488 <https://bugs.python.org/issue35488>`__: agregue una prueba a "
 "Path.match() de pathlib para verificar que no admita la coincidencia de "
-"patrones recursivos de estilo glob \*\*."
+"patrones recursivos de estilo glob \\*\\*."
 
 #: ../build/NEWS:6573
 msgid ""
