arreglado errores del CI

--- a/whatsnew/2.3.po
+++ b/whatsnew/2.3.po
@@ -2298,10 +2298,10 @@ msgid ""
 "``len(population)``. For example::"
 msgstr ""
 "La función ``sample(population, k)`` se agregó al módulo :mod:`random`. "
-"*population* is a sequence or ASDF02 object containing the elements of a "
-"population, and ASDF00 chooses *k* elements from the population without "
-"replacing chosen elements.  *k* puede tener cualquier valor hasta "
-"``len(population)``. Por ejemplo::"
+"*population* es una secuencia o un objeto :class:`xrange` que contiene los "
+"elementos de la población, and :func:`sample` elije *k* elementos de la "
+"población sin reemplazar los elementos escogidos. *k* puede tener cualquier "
+"valor hasta ``len(population)``. Por ejemplo::"
 
 #: ../Doc/whatsnew/2.3.rst:1432
 msgid ""
@@ -2492,12 +2492,13 @@ msgid ""
 "another thread to return or to do something will simply hang forever."
 msgstr ""
 "En este ejemplo, :mod:`_threading` se usa como el nombre del módulo para "
-"dejar en claro que el módulo que se está usando no es necesariamente el :mod:"
-"`threadingASDF00threading` real, ya sea que se admitan subprocesos o no, "
-"evitando una declaración: palabra clave: `if` y haciendo que el código sea "
-"un poco más claro. Este módulo no hará mágicamente que el código "
-"multiproceso se ejecute sin subprocesos; el código que espera a que vuelva "
-"otro hilo o que haga algo simplemente se colgará para siempre."
+"dejar en claro que el módulo que se está usando no es necesariamente el "
+"módulo :mod:`threading`. El código puede llamar funciones y usar clases en :"
+"mod:`_threading`, ya sea que se admitan subprocesos o no, evitando una "
+"declaración :keyword:`if` y haciendo que el código sea un poco más claro. "
+"Este módulo no hará mágicamente que el código multiproceso se ejecute sin "
+"subprocesos; el código que espera a que vuelva otro hilo o que haga algo "
+"simplemente se colgará para siempre."
 
 #: ../Doc/whatsnew/2.3.rst:1532
 msgid ""
@@ -2573,9 +2574,12 @@ msgid ""
 "Tcl_Obj` object if no Python equivalent exists. This behavior can be "
 "controlled through the :meth:`wantobjects` method of :class:`tkapp` objects."
 msgstr ""
-"Llamar a métodos Tcl a través del objeto :mod:`_tkinterASDF00tkinter."
-"Tcl_Obj` si no existe un equivalente de Python. Este comportamiento se puede "
-"controlar mediante el método :meth:`wantobjects` de objetos :class:`tkapp`."
+"Llamar a métodos Tcl a través del objeto :mod:`_tkinter` ya no retorna solo "
+"cadena de caracteres.En vez, si Tcl retorna otros objetos esos objetos son "
+"convertidos a su equivalente en Python,si uno existe, o envueltos en una "
+"clase :class:`_tkinter. Tcl_Obj` si no existe un equivalente de Python. Este "
+"comportamiento se puede controlar mediante el método :meth:`wantobjects` de "
+"objetos :class:`tkapp`."
 
 #: ../Doc/whatsnew/2.3.rst:1578
 msgid ""
@@ -2626,8 +2630,8 @@ msgid ""
 "`__delitem__`, and :meth:`keys`. For example::"
 msgstr ""
 "Agregar la combinación como una superclase proporciona la interfaz de "
-"diccionario completa siempre que la clase define :meth:"
-"`__getitem__ASDF00setitem__ASDF00delitem__` y :meth:`keys`. Por ejemplo::"
+"diccionario completa siempre que la clase define :meth:`__getitem__`, :meth:"
+"`__setitem__`, :meth:`__delitem__` y :meth:`keys`. Por ejemplo::"
 
 #: ../Doc/whatsnew/2.3.rst:1639
 msgid "(Contributed by Raymond Hettinger.)"
@@ -3364,8 +3368,8 @@ msgid ""
 ":keyword:`yield` is now always a keyword; if it's used as a variable name in "
 "your code, a different name must be chosen."
 msgstr ""
-": palabra clave: `rendimiento` ahora es siempre una palabra clave; si se usa "
-"como nombre de variable en su código, se debe elegir un nombre diferente."
+":keyword:`yield` ahora es siempre una palabra clave; si se usa como nombre "
+"de variable en su código, se debe elegir un nombre diferente."
 
 #: ../Doc/whatsnew/2.3.rst:2023
 msgid ""
@@ -3404,8 +3408,10 @@ msgid ""
 "Python equivalent, if one exists, or wrapped with a :class:`_tkinter."
 "Tcl_Obj` object if no Python equivalent exists."
 msgstr ""
-"Llamar a métodos Tcl a través del objeto :mod:`_tkinterASDF00tkinter."
-"Tcl_Obj` si no existe un equivalente de Python."
+"Llamar a métodos Tcl a través del objeto :mod:`_tkinter` ya no retornan solo "
+"cadenas de caracteres.En vez, si Tcl retorna otros objetos esos objetos son "
+"convertidos a su equivalente en Python, si uno existe, o está envuelto con "
+"un :class:`_tkinter.Tcl_Obj` si no existe un equivalente de Python."
 
 #: ../Doc/whatsnew/2.3.rst:2039
 msgid ""
