--- a/whatsnew/2.6.po
+++ b/whatsnew/2.6.po
@@ -1294,7 +1294,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/2.6.rst:849
 msgid ":ref:`formatstrings`"
-msgstr ":ref:`formatos`"
+msgstr ":ref:`formatstrings`"
 
 #: ../Doc/whatsnew/2.6.rst:849
 msgid "The reference documentation for format fields."
